Fix preference borders on dark mode
Fixes some borders that currently appear as very light grays on dark
mode to appear as very dark grays. The border bars within a single item
are changed from #eaecf0 (gray100) to #dadde3 (gray200) in light mode to
match a border-color-* token, I think the result still looks fine.

--- a/resources/betafeatures.nojs.less
+++ b/resources/betafeatures.nojs.less
@@ -39,7 +39,7 @@ table.mw-htmlform-container {
 
 .mw-ui-feature-header {
 	width: 100%;
-	border-bottom: 1px solid #eaecf0;
+	border-bottom: 1px solid @border-color-muted;
 	margin-bottom: 0.5em;
 }
 
@@ -67,7 +67,9 @@ table.mw-htmlform-container {
 }
 
 .mw-htmlform-field-HTMLHorizontalRuleField .mw-input hr {
-	background-color: #c8ccd1;
+	// <hr>s are close enough to borders, so use a @border- color,
+	// there's no matching background color variable
+	background-color: @border-color-subtle;
 }
 
 .mw-htmlform-field-HTMLHorizontalRuleField .mw-input hr,
@@ -87,7 +89,7 @@ table.mw-htmlform-container {
 	line-height: 24px;
 	padding: 6px 10px;
 	display: inline-block;
-	border-left: 1px solid #eaecf0;
+	border-left: 1px solid @border-color-muted;
 }
 
 .mw-ui-feature-info-links {
